--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "@cedx/gulp-php-minify": "^12.0.0",
+    "glob": "^8.0.3",
     "gulp": "^4.0.2",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "uglify-php": "^1.0.7"
   }
 }
